# MarioG

./: .gitignore  CMakeLists.txt  README.md  test_connection.cpp
asset/maps/: Map_1.json  Map_2.json  Map_3.json  enemies.json  items-coins.json  test.json  tiles-8.json
asset/save_data/: autosave.svx  autosave.txt
asset/sprites/: 10-coin.json  100-coin.json  1up-mushroom.json  coin.json  curtain.json  enemy.json  explosion.json  fire.json  fireflower.json  goomba.json  koopa-troopa.json  level_theme.json  luigi-fire.json  luigi-select.json  luigi.json  mario-fire.json  mario-select.json  mario.json  question-coin.json  red-mushroom.json  selection-frames.json  sparkle.json  sprites.json  star-coin.json  star.json  starman.json
src/main_app/: main-window.cpp  main-window.hpp  main.cpp
src/main_app/pages/: gameover-page.cpp  gameover-page.hpp  levels.cpp  levels.hpp  main-menu.cpp  main-menu.hpp  mode-select.cpp  mode-select.hpp  page.hpp  select.cpp  select.hpp  settings.cpp  settings.hpp
src/widget_toolkit/: dynamic-box.hpp  event.hpp  interfaces.hpp  keybindings.json  save-state.json
src/widget_toolkit/camera/: camera.hpp
src/widget_toolkit/collision/: CollisionManager.cpp  CollisionManager.hpp
src/widget_toolkit/command/: command.hpp  input-manager.hpp  key-binding-button.cpp  key-binding-button.hpp
src/widget_toolkit/controls/: button-list.hpp  button.cpp  button.hpp  popup-text-list.hpp  popup-text.hpp  slider.cpp  slider.hpp
src/widget_toolkit/entity/: blockfactory.hpp  enemyfactory.hpp  entity.hpp  entityfactory.hpp  player-list.hpp  player.cpp  player.hpp
src/widget_toolkit/entity/animation/: animation.hpp  player_animation.hpp
src/widget_toolkit/entity/blocks/: BackgroundBlock.cpp  BackgroundBlock.hpp  Block.cpp  Block.hpp  Brick.cpp  Brick.hpp  FireWorks.cpp  FireWorks.hpp  FlagPole.cpp  FlagPole.hpp  GameObject.cpp  GameObject.hpp  InvisibleBlock.cpp  InvisibleBlock.hpp  QuestionBlock.cpp  QuestionBlock.hpp  SolidBlock.cpp  SolidBlock.hpp  TileMap.cpp  TileMap.hpp
src/widget_toolkit/entity/box/: box.hpp  dynamic-box.hpp  static-box.hpp
src/widget_toolkit/entity/enemy/: ball.hpp  enemy.hpp  goomba.hpp  koopa.hpp  lakitu.hpp  piranha.hpp
src/widget_toolkit/entity/item/: ItemFactory.hpp  ItemManager.cpp  ItemManager.hpp  item.hpp
src/widget_toolkit/entity/player/: fireball-list.hpp  fireball.hpp  luigi-state-manager.hpp  luigi-state.hpp  mario-state-manager.hpp  mario-state.hpp  player-list.hpp  player-state.hpp  player.cpp  player.hpp
src/widget_toolkit/event/: game-events.hpp
src/widget_toolkit/networking/: GameMode.hpp  NetworkManager.cpp  NetworkManager.hpp
src/widget_toolkit/resource/: LevelDataManager.cpp  LevelDataManager.hpp  LevelState.hpp  SoundManager.cpp  SoundManager.hpp  TextureManager.cpp  TextureManager.hpp
src/widget_toolkit/sfml-extra-feature/: rounded-rectangle-shape.cpp
src/widget_toolkit/sound/: SoundManager.cpp  SoundManager.hpp
(+10 files in other folders)
